Adjusted project summary, the whole page scale, and added scroll to mainview when a project is clicked

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -80,72 +80,72 @@
 
 							<p>Explore my recent projects demonstrating software solutions and modeling frameworks, particularly in mathematical computation. </p>
 							<div id="mainView"></div>
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article id ="cultureSim" class="item project">
-										<button class="image fit project_button"><img src="images/2d-culture-sim.PNG" alt="" /></button>
-										<header>
-											<h3>Corticospinal Culture Simulation</h3>
-										</header>
+							<div id="projects">
+								<div class="row">
+									<div class="col-4 col-12-mobile">
+										<article id ="cultureSim" class="item project">
+											<button class="image fit project_button"><img src="images/2d-culture-sim.PNG" alt="" /></button>
+											<header>
+												<h3>Corticospinal Culture Simulation</h3>
+											</header>
 
-										<div class="hiddenText">
-											This project was written in Python, CSS, HTML, and Javascript! There are a few dependencies to handle some geometry and some basic math functions, but all of the project was written by me!
-											For the interface, I used apache echarts.<br>
-											Find the project here! ->
-											<a href="https://github.com/AdamP1592/Network-Simulation" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
-										</div>
-									</article>
-									<article id = "neural-network" class="item project">
-										<button class="image fit project_button"><img src="images/Neural-Network-From-Scratch.PNG" alt="" /></button>
-										<header>
-											<h3>Neural Network From Scratch</h3>
-										</header>
+											<div class="hiddenText">
+												A 2d corticospinal culture simulation project modeling a network of neurons with stimulation. This project uses a Hodgkin–Huxley neuron model with dynamic synapses based on the Tsodyks–Markram model. It combines biophysical modeling, computational geometry for connectivity, and a Flask backend API to serve a webpage interface
+												Find the project here! ->
+												<a href="https://github.com/AdamP1592/Network-Simulation" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
+											</div>
+										</article>
+										<article id = "neural-network" class="item project">
+											<button class="image fit project_button"><img src="images/Neural-Network-From-Scratch.PNG" alt="" /></button>
+											<header>
+												<h3>Neural Network From Scratch</h3>
+											</header>
 
-										<div class="hiddenText">
-											This project is a neural network built from scratch, written in C++ with no external dependencies. The project is a neural network written from scratch!<br>
-											Find the project here! ->
-											<a href="https://github.com/AdamP1592/Neural-Network" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
-										</div>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article id = "neuron-simulation" class="item project">
-										<button class="image fit project_button"><img src="images/neuron-simulation.PNG" alt="" /></button>
-										<header>
-											<h3>Hodgkin-Huxley Neuron Simulation</h3>
-										</header>
-										<div class="hiddenText">
-											This is a standard hodgkin-huxley neuron simulation implementing squid-axon dynamics. It was written in python and the interface is matplotlib.<br>
-											Find the project here! -><a href="https://github.com/AdamP1592/Neuron-Simulation" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
-										</div>
-									</article>
-									<article id = "synapse-generation" class="item project">
-										<button class="image fit project_button"><img src="images/synaptic-generation.PNG" alt="" /></button>
-										<header>
-											<h3>Synaptic Generator</h3>
-										</header>
-										<div class="hiddenText">
-											This is a framework I built to generate a potential distribution of synapses given microchannel alignement that uses area of overlap to generate a probability of generating a connection.<br>
-											Find the project here! -><a href="https://github.com/AdamP1592/Synapse" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
-										</div>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article>
+											<div class="hiddenText">
+												This project is a neural network built from scratch, written in C++ with no external dependencies. The project is a neural network written from scratch!<br>
+												Find the project here! ->
+												<a href="https://github.com/AdamP1592/Neural-Network" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
+											</div>
+										</article>
+									</div>
+									<div class="col-4 col-12-mobile">
+										<article id = "neuron-simulation" class="item project">
+											<button class="image fit project_button"><img src="images/neuron-simulation.PNG" alt="" /></button>
+											<header>
+												<h3>Hodgkin-Huxley Neuron Simulation</h3>
+											</header>
+											<div class="hiddenText">
+												This is a standard hodgkin-huxley neuron simulation implementing squid-axon dynamics. It was written in python and the interface is matplotlib.<br>
+												Find the project here! -><a href="https://github.com/AdamP1592/Neuron-Simulation" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
+											</div>
+										</article>
+										<article id = "synapse-generation" class="item project">
+											<button class="image fit project_button"><img src="images/synaptic-generation.PNG" alt="" /></button>
+											<header>
+												<h3>Synaptic Generator</h3>
+											</header>
+											<div class="hiddenText">
+												This is a framework I built to generate a potential distribution of synapses given microchannel alignement that uses area of overlap to generate a probability of generating a connection.<br>
+												Find the project here! -><a href="https://github.com/AdamP1592/Synapse" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
+											</div>
+										</article>
+									</div>
+									<div class="col-4 col-12-mobile">
+										<article class="item">
+											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+											<header>
+												<h3>Dolor Penatibus</h3>
+											</header>
+										</article>
+										<article class="item">
+											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+											<header>
+												<h3>Orci Convallis</h3>
+											</header>
+										</article>
+									</div>
 								</div>
 							</div>
-
 						</div>
 					</section>
 
