Modified some text content for the home section and project descriptions

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -59,8 +59,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Adam</strong>, a software engineer!<br />
-								<p>I have a particular interest in modeling phenomenon <br>
-								especially simulating complex biologiclal processes.</p>
+								<p>Hi, I'm Adam Peterson—a passionate software engineer with a lifelong love for coding. Whether it's building a neural network from scratch or simulating complex neuron behaviors, I thrive on transforming innovative concepts into functional, real-world solutions.</p>
 							</header>
 
 							<footer>
@@ -102,7 +101,7 @@
 											</header>
 
 											<div class="hiddenText">
-												This project is a neural network built from scratch, written in C++ with no external dependencies. The project is a neural network written from scratch!<br>
+												This project is a neural network built from scratch, written in C++ with no external dependencies. Its current use is a regression classifier, using a leaky relu activation function and standard gradient descent backpropagation.<br>
 												Find the project here! ->
 												<a href="https://github.com/AdamP1592/Neural-Network" class="icon brands fa-github" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><span class="label">Github</span></a>
 											</div>
@@ -168,7 +167,7 @@
 								<br>
 								In addition to my technical and analytical abilities, my hands-on work as a garage door technician and carpenter has strengthened my communication, collaboration, and resilience. These roles have taught me to approach challenges pragmatically, work well under pressure, and value teamwork—qualities that are essential for any successful project.
 								<br>
-								Outside of work, I enjoy exploring the outdoors, which helps me recharge and gain new perspectives. I'm eager to collaborate on groundbreaking projects that blend technical innovation with creative problem-solving. If you'd like to connect or learn more about my work, feel free to reach out.</p>
+								Outside of work, I enjoy exploring the outdoors, fishing, and kayaking, which helps me recharge and gain new perspectives. I'm eager to collaborate on groundbreaking projects that blend technical innovation with creative problem-solving. If you'd like to connect or learn more about my work, feel free to reach out.</p>
 
 						</div>
 					</section>
